# covid-tracing-sim

./: Cargo.toml  README.md  default.nix  shell.nix
config/: params.dhall  state.dhall
config/util/: health.dhall  person.dhall  types.dhall
src/: config.rs  environment.rs  lib.rs  main.rs  params.rs  state.rs  step.rs
