[package]
name = "covid-tracing-sim"
version = "0.1.0"
authors = ["Greg Hale <imalsogreg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde      = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
clap       = "^2.33"
chrono     = {version = "^0.4", features = ["serde"] }
